fix: Adjust hero-section spacing

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ header {
     align-items: center;
     background-color: #1F2937;
     padding: 16px 15%;
-
 }
 
 .company, ul {
@@ -48,14 +47,17 @@ li a {
     padding: 50px 15%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+    gap: 24px;
 }
 
 .hero-text {
+    padding: 16px;
+    max-width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 8px;
 }
 
 .hero-main-text {
@@ -85,5 +87,5 @@ button {
 
 .hero-img {
     height: auto;
-    width: 50%;
+    width: 45%;
 }
